rename page.css 11

--- a/basics.html
+++ b/basics.html
@@ -659,7 +659,7 @@
 
                                 <div class="_13wkz77">
                                   <div
-                                    class="_1yhfti2"
+                                    class="products-container__alert-warning-date-text"
                                     id="location-error-text"
                                   >
                                     <span style="margin-right: 4px"
