--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -455,7 +455,7 @@
                             </div>
                           </div>
                           <div class="_1r2969v6">
-                            <div class="_1yhfti2" id="price-error-text">
+                            <div class="products-container__alert-warning-date-text" id="price-error-text">
                               <span style="margin-right: 4px"
                                 ><svg
                                   viewBox="0 0 16 16"
