--- a/explore-where.html
+++ b/explore-where.html
@@ -577,7 +577,7 @@
                                                           </button>
                                                           <div>
                                                             <div
-                                                              class="header__search-tabs-filter-body-where-region-item-text o1es9nqs dir dir-ltr"
+                                                              class="header__search-tabs-filter-body-where-region-item-text header__search-tabs-filter-body-where-region-item-md-bold dir dir-ltr"
                                                             >
                                                               I’m flexible
                                                             </div>
