--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -2358,7 +2358,7 @@
                         </label>
                       </div>
                       <div class="_4l12l8">
-                        <div class="_1yhfti2" id="credit-card-zip-error">
+                        <div class="products-container__alert-warning-date-text" id="credit-card-zip-error">
                           <span style="margin-right: 4px"
                             ><svg
                               viewBox="0 0 16 16"
