--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -274,7 +274,7 @@
                                     <div style="margin-bottom: 48px">
                                       <section>
                                         <div class="notification__container">
-                                          <div class="_1xw8gzmn">
+                                          <div class="notification__container-account-settings">
                                             <div
                                               id="account-settings-main-navigation-tabs"
                                             >
