--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -22,23 +22,23 @@
         data-hypernova-id="e41b5fed-79e7-4b1c-a98a-3f02006544b3"
       >
         <div dir="ltr">
-          <header role="banner" class="_8iqo2b">
-            <div class="_19trzwd">
+          <header role="banner" class="profile-reviews__header">
+            <div class="profile-reviews__header-navbar">
               <div class="footer__progress-active-wrapper">
                 <div class="cell-middle">
                   <div>
-                    <div class="_ousp44">
+                    <div class="profile-reviews__header-logo-wrapper">
                       <div>
                         <div class="nav-brand-xs">
                           <button
                             aria-label="Main navigation menu"
                             aria-haspopup="true"
-                            class="_1gbvotfo"
+                            class="profile-reviews__header-logo-xs-btn"
                             type="button"
                           >
-                            <div class="_5nim5h">
+                            <div class="profile-reviews__header-logo-xs-wrapper">
                               <div class="inline-block">
-                                <div class="_iiid5y">
+                                <div class="profile-reviews__header-logo-xs-icon">
                                   <svg
                                     viewBox="0 0 1000 1000"
                                     role="presentation"
@@ -57,10 +57,10 @@
                                   </svg>
                                 </div>
                               </div>
-                              <div class="_mo78s93">
-                                <div class="_3n7658">
+                              <div class="profile-reviews__header-logo-xs-overlay">
+                                <div class="profile-reviews__header-logo-xs-overlay-wrapper">
                                   <div
-                                    class="_z7e3cb"
+                                    class="profile-reviews__logo-xs-overlay-wrapper"
                                     style="transform: rotate(0deg)"
                                   >
                                     <svg
@@ -89,11 +89,11 @@
                         <div class="nav-brand-xl">
                           <a
                             href="/?logo=1"
-                            class="_1g2dfiu"
+                            class="profile-reviews__logo-xl"
                             aria-label="Airbnb homepage"
-                            ><div class="_5nim5h">
+                            ><div class="profile-reviews__header-logo-xs-wrapper">
                               <div class="inline-block">
-                                <div class="_iiid5y">
+                                <div class="profile-reviews__header-logo-xs-icon">
                                   <svg
                                     viewBox="0 0 1000 1000"
                                     role="presentation"
@@ -116,29 +116,29 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_shsmsj"></div>
+                    <div class="profile-reviews__logo-overlay"></div>
                   </div>
                 </div>
                 <div class="footer__progress-active-content">
                   <div>
                     <div class="inherit-hide-print">
-                      <div class="_dx84z0">
+                      <div class="profile-reviews__progress-active-overlay">
                         <div>
-                          <div class="_1wsro53">
-                            <div class="_1xb0vsy">
-                              <div class="_shzwii">
-                                <div class="_1fkg0r2">
+                          <div class="profile-reviews__search-wrapper">
+                            <div class="profile-reviews__search-container">
+                              <div class="profile-reviews__search-content">
+                                <div class="profile-reviews__search-input">
                                   <form
                                     action="/s/all"
                                     method="get"
                                     role="search"
                                   >
                                     <div dir="ltr">
-                                      <div class="_1blc3lt">
+                                      <div class="profile-reviews__search-input-wrapper">
                                         <label
                                           for="Koan-header__input"
-                                          class="_1os10fm"
-                                          ><div class="_1hwe6usi">
+                                          class="profile-reviews__search-input-label"
+                                          ><div class="profile-reviews__search-input-icon">
                                             <svg
                                               viewBox="0 0 16 16"
                                               role="presentation"
@@ -157,7 +157,7 @@
                                             </svg>
                                           </div>
                                           <div class="va-middle-vh">
-                                            <div class="_1w14zmh">
+                                            <div class="profile-reviews__search-input-field">
                                               <input
                                                 class="_oqur3jl"
                                                 aria-autocomplete="list"
@@ -179,16 +179,16 @@
                                     </div>
                                   </form>
                                 </div>
-                                <div class="_sp4c0h">
+                                <div class="profile-reviews__search-btn-wrapper">
                                   <button
                                     type="button"
-                                    class="_3iq7eg"
+                                    class="profile-reviews__search-btn"
                                     aria-busy="false"
                                   ></button>
                                 </div>
                               </div>
                             </div>
-                            <div class="_jd5bx3">
+                            <div class="profile-reviews__search-msg">
                               <ul
                                 aria-label="Search suggestions"
                                 id="Koan-header__listbox"
@@ -212,8 +212,8 @@
                     <div class="inherit-hide-print">
                       <nav aria-label="Main navigation menu">
                         <ul class="_1s04l2o">
-                          <li class="_1g2dfiu"></li>
-                          <li class="_1g2dfiu">
+                          <li class="profile-reviews__logo-xl"></li>
+                          <li class="profile-reviews__logo-xl">
                             <div>
                               <div class="relative">
                                 <a
@@ -235,7 +235,7 @@
                               </div>
                             </div>
                           </li>
-                          <li class="_1g2dfiu">
+                          <li class="profile-reviews__logo-xl">
                             <div>
                               <div class="relative">
                                 <button
@@ -263,7 +263,7 @@
                               </div>
                             </div>
                           </li>
-                          <li class="_1g2dfiu">
+                          <li class="profile-reviews__logo-xl">
                             <div>
                               <div class="relative">
                                 <a
@@ -285,7 +285,7 @@
                               </div>
                             </div>
                           </li>
-                          <li class="_1g2dfiu">
+                          <li class="profile-reviews__logo-xl">
                             <div>
                               <div class="relative">
                                 <a
@@ -307,7 +307,7 @@
                               </div>
                             </div>
                           </li>
-                          <li class="_1g2dfiu">
+                          <li class="profile-reviews__logo-xl">
                             <div>
                               <div class="relative">
                                 <a
@@ -329,7 +329,7 @@
                               </div>
                             </div>
                           </li>
-                          <li class="_1g2dfiu">
+                          <li class="profile-reviews__logo-xl">
                             <div>
                               <div class="relative">
                                 <button
@@ -354,7 +354,7 @@
                               </div>
                             </div>
                           </li>
-                          <li class="_1g2dfiu">
+                          <li class="profile-reviews__logo-xl">
                             <div style="margin-right: 8px">
                               <div>
                                 <div class="relative">
