--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -39,24 +39,24 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <header role="banner" class="_8iqo2b">
-              <div class="_19trzwd">
+            <header role="banner" class="profile-reviews__header">
+              <div class="profile-reviews__header-navbar">
                 <div class="footer__progress-active-wrapper">
                   <div class="cell-middle">
                     <div>
                       <div class="contents">
                         <div class="container__border-0" aria-hidden="true"></div>
                         <div class="contents">
-                          <div class="_ousp44">
+                          <div class="profile-reviews__header-logo-wrapper">
                             <div>
                               <div data-showat="largeAndAbove">
                                 <a
                                   href="/?logo=1"
-                                  class="_1g2dfiu"
+                                  class="profile-reviews__logo-xl"
                                   aria-label="Airbnb homepage"
-                                  ><div class="_5nim5h">
+                                  ><div class="profile-reviews__header-logo-xs-wrapper">
                                     <div class="inline-block">
-                                      <div class="_iiid5y">
+                                      <div class="profile-reviews__header-logo-xs-icon">
                                         <svg
                                           viewBox="0 0 1000 1000"
                                           role="presentation"
@@ -79,7 +79,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_shsmsj"></div>
+                          <div class="profile-reviews__logo-overlay"></div>
                         </div>
                         <div class="container__border-0" aria-hidden="true"></div>
                       </div>
@@ -88,21 +88,21 @@
                   <div class="footer__progress-active-content">
                     <div>
                       <div class="inherit-hide-print">
-                        <div class="_dx84z0">
+                        <div class="profile-reviews__progress-active-overlay">
                           <div>
-                            <div class="_1wsro53">
-                              <div class="_1xb0vsy">
-                                <div class="_shzwii">
-                                  <div class="_1fkg0r2">
+                            <div class="profile-reviews__search-wrapper">
+                              <div class="profile-reviews__search-container">
+                                <div class="profile-reviews__search-content">
+                                  <div class="profile-reviews__search-input">
                                     <form
                                       action="/s/all"
                                       method="get"
                                       role="search"
                                     >
                                       <div dir="ltr">
-                                        <div class="_1blc3lt">
-                                          <div class="_1os10fm">
-                                            <div class="_1hwe6usi">
+                                        <div class="profile-reviews__search-input-wrapper">
+                                          <div class="profile-reviews__search-input-label">
+                                            <div class="profile-reviews__search-input-icon">
                                               <svg
                                                 viewBox="0 0 16 16"
                                                 role="presentation"
@@ -121,7 +121,7 @@
                                               </svg>
                                             </div>
                                             <div class="va-middle-vh">
-                                              <div class="_1w14zmh">
+                                              <div class="profile-reviews__search-input-field">
                                                 <input
                                                   class="_oqur3jl"
                                                   aria-autocomplete="list"
@@ -144,16 +144,16 @@
                                       </div>
                                     </form>
                                   </div>
-                                  <div class="_sp4c0h">
+                                  <div class="profile-reviews__search-btn-wrapper">
                                     <button
                                       type="button"
-                                      class="_3iq7eg"
+                                      class="profile-reviews__search-btn"
                                       aria-busy="false"
                                     ></button>
                                   </div>
                                 </div>
                               </div>
-                              <div class="_jd5bx3">
+                              <div class="profile-reviews__search-msg">
                                 <ul
                                   aria-label="Search suggestions"
                                   id="Koan-header__listbox"
@@ -177,7 +177,7 @@
                       <div class="inherit-hide-print">
                         <nav aria-label="Main navigation menu">
                           <ul class="_1s04l2o">
-                            <li class="_1g2dfiu">
+                            <li class="profile-reviews__logo-xl">
                               <div>
                                 <div class="relative">
                                   <a
@@ -198,7 +198,7 @@
                                 </div>
                               </div>
                             </li>
-                            <li class="_1g2dfiu">
+                            <li class="profile-reviews__logo-xl">
                               <div>
                                 <div class="relative">
                                   <button
@@ -226,7 +226,7 @@
                                 </div>
                               </div>
                             </li>
-                            <li class="_1g2dfiu">
+                            <li class="profile-reviews__logo-xl">
                               <div>
                                 <div class="relative">
                                   <a
@@ -247,7 +247,7 @@
                                 </div>
                               </div>
                             </li>
-                            <li class="_1g2dfiu">
+                            <li class="profile-reviews__logo-xl">
                               <div>
                                 <div class="relative">
                                   <a
@@ -269,7 +269,7 @@
                                 </div>
                               </div>
                             </li>
-                            <li class="_1g2dfiu">
+                            <li class="profile-reviews__logo-xl">
                               <div>
                                 <div class="relative">
                                   <button
@@ -294,7 +294,7 @@
                                 </div>
                               </div>
                             </li>
-                            <li class="_1g2dfiu">
+                            <li class="profile-reviews__logo-xl">
                               <div>
                                 <div class="relative">
                                   <a
@@ -316,7 +316,7 @@
                                 </div>
                               </div>
                             </li>
-                            <li class="_1g2dfiu">
+                            <li class="profile-reviews__logo-xl">
                               <div style="margin-right: 8px">
                                 <div>
                                   <div class="relative">
