--- a/resources.html
+++ b/resources.html
@@ -28,7 +28,7 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_ousp44">
+            <div class="profile-reviews__header-logo-wrapper">
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
                   <div class="footer__progress-active-wrapper">
@@ -39,7 +39,7 @@
                             href="/?logo=1"
                             aria-label="Airbnb homepage"
                             data-no-client-routing="true"
-                            class="_1g2dfiu"
+                            class="profile-reviews__logo-xl"
                             ><div class="_wrboqt">
                               <div class="_19a6hja">
                                 <svg
@@ -91,9 +91,9 @@
                                   <div>
                                     <div class="_1fls13n">
                                       <div dir="ltr">
-                                        <div class="_1blc3lt">
-                                          <div class="_1os10fm">
-                                            <div class="_1hwe6usi">
+                                        <div class="profile-reviews__search-input-wrapper">
+                                          <div class="profile-reviews__search-input-label">
+                                            <div class="profile-reviews__search-input-icon">
                                               <svg
                                                 viewBox="0 0 16 16"
                                                 role="presentation"
@@ -112,7 +112,7 @@
                                               </svg>
                                             </div>
                                             <div class="va-middle-vh">
-                                              <div class="_1w14zmh">
+                                              <div class="profile-reviews__search-input-field">
                                                 <input
                                                   type="text"
                                                   class="_zxqapn5"
@@ -178,7 +178,7 @@
                           <div class="_cjo0m2">
                             <nav aria-label="Resource Center">
                               <ul class="_1s04l2o">
-                                <li class="_1g2dfiu">
+                                <li class="profile-reviews__logo-xl">
                                   <div>
 
                                     <div
@@ -231,7 +231,7 @@
                                     </div>
                                   </div>
                                 </li>
-                                <li class="_1g2dfiu">
+                                <li class="profile-reviews__logo-xl">
                                   <div>
                                     <div class="relative">
                                       <a
@@ -313,9 +313,9 @@
                       <div>
                         <div class="_1fls13n">
                           <div dir="ltr">
-                            <div class="_1blc3lt">
-                              <div class="_1os10fm">
-                                <div class="_1hwe6usi">
+                            <div class="profile-reviews__search-input-wrapper">
+                              <div class="profile-reviews__search-input-label">
+                                <div class="profile-reviews__search-input-icon">
                                   <svg
                                     viewBox="0 0 16 16"
                                     role="presentation"
@@ -334,7 +334,7 @@
                                   </svg>
                                 </div>
                                 <div class="va-middle-vh">
-                                  <div class="_1w14zmh">
+                                  <div class="profile-reviews__search-input-field">
                                     <input
                                       class="_zxqapn5"
                                       aria-autocomplete="list"
