--- a/signup_login.html
+++ b/signup_login.html
@@ -1224,7 +1224,7 @@
                                       </div>
                                       <div class="_4l12l8">
                                         <div
-                                          class="_1yhfti2"
+                                          class="products-container__alert-warning-date-text"
                                           id="phone-number-error-phoneNumber"
                                         >
                                           <span style="margin-right: 4px"
@@ -1397,7 +1397,7 @@
                                       </div>
                                       <div class="place__recommended-no">
                                         <div
-                                          class="_1yhfti2"
+                                          class="products-container__alert-warning-date-text"
                                           id="email-login-email-InputField-help"
                                           data-testid="email-login-email-InputField-help-error"
                                         >
@@ -2014,7 +2014,7 @@
                                     </div>
                                   </div>
                                   <div
-                                    class="_1yhfti2 hidden"
+                                    class="products-container__alert-warning-date-text hidden"
                                     id="phone-verification-code-error"
                                     data-testid="phone-verification-code-error"
                                   >
@@ -2562,7 +2562,7 @@
                                       </div>
                                       <div class="_b0398r">
                                         <div
-                                          class="_1yhfti2"
+                                          class="products-container__alert-warning-date-text"
                                           id="email-signup-email__error"
                                         >
                                           <span style="margin-right: 4px"
@@ -2751,7 +2751,7 @@
                                           </div>
                                         </div>
                                         <div class="place__recommended-no">
-                                          <div class="_1yhfti2" id="error-text">
+                                          <div class="products-container__alert-warning-date-text" id="error-text">
                                             <span style="margin-right: 4px"
                                               ><svg
                                                 viewBox="0 0 16 16"
@@ -2847,7 +2847,7 @@
                                           </div>
                                           <div class="place__recommended-no">
                                             <div
-                                              class="_1yhfti2"
+                                              class="products-container__alert-warning-date-text"
                                               id="email-signup-email-InputField-help"
                                               data-testid="email-signup-email-InputField-help-error"
                                             >
@@ -4478,7 +4478,7 @@
                                     </div>
                                     <div class="_4l12l8">
                                       <div
-                                        class="_1yhfti2"
+                                        class="products-container__alert-warning-date-text"
                                         id="phone-number-error-phoneNumber"
                                       >
                                         <span style="margin-right: 4px"
@@ -4667,7 +4667,7 @@
                                     </div>
                                     <div class="place__recommended-no">
                                       <div
-                                        class="_1yhfti2"
+                                        class="products-container__alert-warning-date-text"
                                         id="email-login-email-InputField-help"
                                         data-testid="email-login-email-InputField-help-error"
                                       >
@@ -5275,7 +5275,7 @@
                                   </div>
                                 </div>
                                 <div
-                                  class="_1yhfti2 hidden"
+                                  class="products-container__alert-warning-date-text hidden"
                                   id="phone-verification-code-error"
                                   data-testid="phone-verification-code-error"
                                 >
@@ -5940,7 +5940,7 @@
                                     </div>
                                     <div class="_b0398r">
                                       <div
-                                        class="_1yhfti2"
+                                        class="products-container__alert-warning-date-text"
                                         id="email-signup-email__error"
                                       >
                                         <span style="margin-right: 4px"
@@ -6129,7 +6129,7 @@
                                         </div>
                                       </div>
                                       <div class="place__recommended-no">
-                                        <div class="_1yhfti2" id="error-text">
+                                        <div class="products-container__alert-warning-date-text" id="error-text">
                                           <span style="margin-right: 4px"
                                             ><svg
                                               viewBox="0 0 16 16"
@@ -6221,7 +6221,7 @@
                                         </div>
                                         <div class="place__recommended-no">
                                           <div
-                                            class="_1yhfti2"
+                                            class="products-container__alert-warning-date-text"
                                             id="email-signup-email-InputField-help"
                                             data-testid="email-signup-email-InputField-help-error"
                                           >
