--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -417,7 +417,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                                 </div>
                                 <div class="_q74w1pi">
                                   <div
-                                    class="_1yhfti2"
+                                    class="products-container__alert-warning-date-text"
                                     id="text-area-error-text"
                                   >
                                     <span style="margin-right: 4px"
