--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -410,7 +410,7 @@ Cheerful private villa with pool</textarea
                                 </div>
                                 <div class="_q74w1pi">
                                   <div
-                                    class="_1yhfti2"
+                                    class="products-container__alert-warning-date-text"
                                     id="text-area-error-text"
                                   >
                                     <span style="margin-right: 4px"
