--- a/login-security.html
+++ b/login-security.html
@@ -535,7 +535,7 @@
                                             name="authenticity_token"
                                             value="V4$.airbnb.com$4XpLiEmtDRE$R0atfgYQuVvCqjVUuN65GnnxZv8VzN2CtZqirYJ-Vuc="
                                           />
-                                          <div class="_1okh7pi0">
+                                          <div class="login-security__social-acc">
                                             <div class="flex-bar">
                                               <div class="flex-bar-item-grow">
                                                 <span class="hero-banner__description"
@@ -580,7 +580,7 @@
                                             name="authenticity_token"
                                             value="V4$.airbnb.com$4XpLiEmtDRE$R0atfgYQuVvCqjVUuN65GnnxZv8VzN2CtZqirYJ-Vuc="
                                           />
-                                          <div class="_1okh7pi0">
+                                          <div class="login-security__social-acc">
                                             <div class="flex-bar">
                                               <div class="flex-bar-item-grow">
                                                 <span class="hero-banner__description"
@@ -1050,7 +1050,7 @@
                                       <div class="landing-page__faq-question">Account</div>
                                     </h1>
                                   </div>
-                                  <div class="_1okh7pi0">
+                                  <div class="login-security__social-acc">
                                     <div class="flex-bar">
                                       <div class="flex-bar-item-grow">
                                         <span class="hero-banner__description"
@@ -1684,7 +1684,7 @@
                                               name="authenticity_token"
                                               value="V4$.airbnb.com$4XpLiEmtDRE$R0atfgYQuVvCqjVUuN65GnnxZv8VzN2CtZqirYJ-Vuc="
                                             />
-                                            <div class="_1okh7pi0">
+                                            <div class="login-security__social-acc">
                                               <div class="flex-bar">
                                                 <div class="flex-bar-item-grow">
                                                   <span class="hero-banner__description"
@@ -1729,7 +1729,7 @@
                                               name="authenticity_token"
                                               value="V4$.airbnb.com$4XpLiEmtDRE$R0atfgYQuVvCqjVUuN65GnnxZv8VzN2CtZqirYJ-Vuc="
                                             />
-                                            <div class="_1okh7pi0">
+                                            <div class="login-security__social-acc">
                                               <div class="flex-bar">
                                                 <div class="flex-bar-item-grow">
                                                   <span class="hero-banner__description"
@@ -2212,7 +2212,7 @@
                                         <div class="landing-page__faq-question">Account</div>
                                       </h2>
                                     </div>
-                                    <div class="_1okh7pi0">
+                                    <div class="login-security__social-acc">
                                       <div class="flex-bar">
                                         <div class="flex-bar-item-grow">
                                           <span class="hero-banner__description"
