--- a/preferences.html
+++ b/preferences.html
@@ -691,10 +691,10 @@
                                           name="Translation"
                                           value="false"
                                         />
-                                        <div class="_byj74f"></div>
-                                        <div class="_nkz5o8">
+                                        <div class="prof-hosting__switch-overlay"></div>
+                                        <div class="prof-hosting__switch-circle">
                                           <div class="payment-payout__switch-circle-wrapper">
-                                            <div class="_wd4c3r"></div>
+                                            <div class="prof-hosting__switch-circle-wrapper-spacer"></div>
                                             <svg
                                               viewBox="0 0 52 52"
                                               fill="currentColor"
@@ -718,8 +718,8 @@
                                               ></path>
                                             </svg>
                                           </div>
-                                          <div class="_zsj5a1p">
-                                            <div class="_1est833r">
+                                          <div class="prof-hosting__switch-circle-overlay">
+                                            <div class="prof-hosting__switch-circle-icon-overlay">
                                               <svg
                                                 viewBox="0 0 52 52"
                                                 fill="currentColor"
