--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -269,7 +269,7 @@
                                 </div>
                               </div>
                               <div class="relative">
-                                <div class="_1okh7pi0">
+                                <div class="login-security__social-acc">
                                   <div class="flex-bar">
                                     <div class="flex-bar-item-grow">
                                       <span class="hero-banner__description"
@@ -370,10 +370,10 @@
                                           name="email removal whitelist switch"
                                           value="false"
                                         />
-                                        <div class="_byj74f"></div>
-                                        <div class="_nkz5o8">
+                                        <div class="prof-hosting__switch-overlay"></div>
+                                        <div class="prof-hosting__switch-circle">
                                           <div class="payment-payout__switch-circle-wrapper">
-                                            <div class="_wd4c3r"></div>
+                                            <div class="prof-hosting__switch-circle-wrapper-spacer"></div>
                                             <svg
                                               viewBox="0 0 52 52"
                                               fill="currentColor"
@@ -397,8 +397,8 @@
                                               ></path>
                                             </svg>
                                           </div>
-                                          <div class="_zsj5a1p">
-                                            <div class="_1est833r">
+                                          <div class="prof-hosting__switch-circle-overlay">
+                                            <div class="prof-hosting__switch-circle-icon-overlay">
                                               <svg
                                                 viewBox="0 0 52 52"
                                                 fill="currentColor"
@@ -667,7 +667,7 @@
                                 </div>
                                 <div class="notification__container">
                                   <div class="notification__container-wrapper">
-                                    <div class="_1okh7pi0">
+                                    <div class="login-security__social-acc">
                                       <div class="flex-bar">
                                         <div class="flex-bar-item-grow">
                                           <span class="hero-banner__description"
@@ -773,10 +773,10 @@
                                               name="email removal whitelist switch"
                                               value="false"
                                             />
-                                            <div class="_byj74f"></div>
-                                            <div class="_nkz5o8">
+                                            <div class="prof-hosting__switch-overlay"></div>
+                                            <div class="prof-hosting__switch-circle">
                                               <div class="payment-payout__switch-circle-wrapper">
-                                                <div class="_wd4c3r"></div>
+                                                <div class="prof-hosting__switch-circle-wrapper-spacer"></div>
                                                 <svg
                                                   viewBox="0 0 52 52"
                                                   fill="currentColor"
@@ -800,8 +800,8 @@
                                                   ></path>
                                                 </svg>
                                               </div>
-                                              <div class="_zsj5a1p">
-                                                <div class="_1est833r">
+                                              <div class="prof-hosting__switch-circle-overlay">
+                                                <div class="prof-hosting__switch-circle-icon-overlay">
                                                   <svg
                                                     viewBox="0 0 52 52"
                                                     fill="currentColor"
