rename page.css 11

--- a/signup_login.html
+++ b/signup_login.html
@@ -1201,7 +1201,7 @@
                                       </div>
                                       <div class="_4l12l8">
                                         <div
-                                          class="_1yhfti2"
+                                          class="products-container__alert-warning-date-text"
                                           id="phone-number-error-phoneNumber"
                                         >
                                           <span style="margin-right: 4px"
@@ -1353,7 +1353,7 @@
                                       </div>
                                       <div class="place__recommended-no">
                                         <div
-                                          class="_1yhfti2"
+                                          class="products-container__alert-warning-date-text"
                                           id="email-login-email-InputField-help"
                                           data-testid="email-login-email-InputField-help-error"
                                         >
@@ -1944,7 +1944,7 @@
                                     </div>
                                   </div>
                                   <div
-                                    class="_1yhfti2 hidden"
+                                    class="products-container__alert-warning-date-text hidden"
                                     id="phone-verification-code-error"
                                     data-testid="phone-verification-code-error"
                                   >
@@ -2358,7 +2358,7 @@
                                       </div>
                                       <div class="_b0398r">
                                         <div
-                                          class="_1yhfti2"
+                                          class="products-container__alert-warning-date-text"
                                           id="email-signup-email__error"
                                         >
                                           <span style="margin-right: 4px"
@@ -2547,7 +2547,7 @@
                                           </div>
                                         </div>
                                         <div class="place__recommended-no">
-                                          <div class="_1yhfti2" id="error-text">
+                                          <div class="products-container__alert-warning-date-text" id="error-text">
                                             <span style="margin-right: 4px"
                                               ><svg
                                                 viewBox="0 0 16 16"
@@ -2643,7 +2643,7 @@
                                           </div>
                                           <div class="place__recommended-no">
                                             <div
-                                              class="_1yhfti2"
+                                              class="products-container__alert-warning-date-text"
                                               id="email-signup-email-InputField-help"
                                               data-testid="email-signup-email-InputField-help-error"
                                             >
@@ -4252,7 +4252,7 @@
                                     </div>
                                     <div class="_4l12l8">
                                       <div
-                                        class="_1yhfti2"
+                                        class="products-container__alert-warning-date-text"
                                         id="phone-number-error-phoneNumber"
                                       >
                                         <span style="margin-right: 4px"
@@ -4398,7 +4398,7 @@
                                     </div>
                                     <div class="place__recommended-no">
                                       <div
-                                        class="_1yhfti2"
+                                        class="products-container__alert-warning-date-text"
                                         id="email-login-email-InputField-help"
                                         data-testid="email-login-email-InputField-help-error"
                                       >
@@ -4982,7 +4982,7 @@
                                   </div>
                                 </div>
                                 <div
-                                  class="_1yhfti2 hidden"
+                                  class="products-container__alert-warning-date-text hidden"
                                   id="phone-verification-code-error"
                                   data-testid="phone-verification-code-error"
                                 >
@@ -5391,7 +5391,7 @@
                                     </div>
                                     <div class="_b0398r">
                                       <div
-                                        class="_1yhfti2"
+                                        class="products-container__alert-warning-date-text"
                                         id="email-signup-email__error"
                                       >
                                         <span style="margin-right: 4px"
@@ -5580,7 +5580,7 @@
                                         </div>
                                       </div>
                                       <div class="place__recommended-no">
-                                        <div class="_1yhfti2" id="error-text">
+                                        <div class="products-container__alert-warning-date-text" id="error-text">
                                           <span style="margin-right: 4px"
                                             ><svg
                                               viewBox="0 0 16 16"
@@ -5672,7 +5672,7 @@
                                         </div>
                                         <div class="place__recommended-no">
                                           <div
-                                            class="_1yhfti2"
+                                            class="products-container__alert-warning-date-text"
                                             id="email-signup-email-InputField-help"
                                             data-testid="email-signup-email-InputField-help-error"
                                           >
